sumo/tests/sumo/extended/vaporizer/errors/id_missing/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Missing or empty id in a vaporizer-object.
Quitting (on error).
